docs: add favicon, rs logo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="assets/favicon.ico">
+    <link rel="icon" href="img/favicon.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
@@ -32,7 +32,7 @@
     <main class="main">
         <div class="container main-container">
             <section class="section profile-section" id="profile">
-                <img src="assets/avatar.jpg" alt="my avatar" class="section-profile-photo">
+                <img src="img/avatar.jpg" alt="my avatar" class="section-profile-photo">
                 <div class="section-profile-title">
                     <h1 class="main-title">Vadim Pospelov</h1>
                     <h3 class="section-subtitle">Junior Frontend Developer</h3>
@@ -64,8 +64,9 @@
                 <h2 class="section-title">Summary</h2>
                 <p>I am a junior web developer who is interested in creating beautiful and functional websites. I am
                     constantly learning and improving my skills to create high-quality projects.</p>
-                <p>Always ready to help people with their coding problems.</p>
-                <p>Poblem solver and Moderator at the freeCodeCamp forum.</p>
+                <p>Always ready to help people with their coding issues.</p>
+                <p>Poblem solver and Moderator at the freeCodeCamp Forum.</p>
+                <p>Problem solver at Codecademy Forums.</p>
             </section>
             <section class="section" id="skills">
                 <h2 class="section-title">Skills</h2>
