--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <p>I am a junior web developer who is interested in creating beautiful and functional websites. I am
                     constantly learning and improving my skills to create high-quality projects.</p>
                 <p>Always ready to help people with their coding issues.</p>
-                <p>Poblem solver and Moderator at <a class="summary-link"
+                <p>Problem solver and Moderator at <a class="summary-link"
                         href="https://forum.freecodecamp.org/u/ray13/summary" target="_blank">the freeCodeCamp
                         Forum</a>.</p>
                 <p>Problem solver at <a class="summary-link" href="https://discuss.codecademy.com/u/ray-13/summary"
