fix: update project links

--- a/index.html
+++ b/index.html
@@ -106,9 +106,16 @@ alert(result);
                 <h2 class="section-title">Projects</h2>
                 <ul class="section-list">
                     <li class="section-item"> <a href="https://vh135.github.io/404-project/" target="_blank">404 Project
-                            (HTML, CSS)</a> </li>
-                    <li class="section-item"> <a href="https://vh135.github.io/burgers/" target="_blank">Burgers Project
-                            (HTML, CSS, JS, Angular)</a> </li>
+                            / Yandex Practicum Demo Course
+                            (HTML, CSS)</a></li>
+                    <li class="section-item">
+                        <a href="https://vh135.github.io/qr-code-component/" target="_blank">QR Code Component /
+                            Frontend Mentor Challenge (HTML, CSS)</a>
+                    </li>
+                    <li class="section-item">
+                        <a href="https://vh135.github.io/blog-preview-card/" target="_blank">Blog Preview Card /
+                            Frontend Mentor Challenge (HTML, SCSS)</a>
+                    </li>
                 </ul>
             </section>
             <section class="section" id="education">
